--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -6,3 +6,32 @@
   background-size: 100% 100%;
   height: 100vh;
 }
+
+.home__container {
+  text-align: center;
+  padding: 240px 128px 128px;
+  color: #FDF6E3;
+}
+
+.home__headline {
+  letter-spacing: 1.4px;
+}
+
+.home__content {
+  font-size: 20px;
+  letter-spacing: 0.8px;
+  margin-bottom: 32px;
+}
+
+.home__button {
+  padding: 4px 16px;
+  background-color: #D33682;
+  border: 1px solid #D33682;
+  outline: none;
+}
+
+.home__button:hover, .home__button:focus {
+  opacity: 0.9;
+  background-color: #E83E8C;
+  color: #FFF;
+}
