Listen for scroll event and pass isTop props to Header.js at App.js, add background transition styles at Header.js

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,4 +1,10 @@
-.navbar {
-  margin: 0 auto;
-  max-width: 1300px;
+.navbar--fixed {
+  -webkit-transition: background-color 200ms linear;
+  transition: background-color 200ms linear;
+}
+
+.navbar--scroll {
+  background-color: #141823;
+  -webkit-transition: background-color 200ms linear;
+  transition: background-color 200ms linear;
 }
