--- a/src/css/Loading.css
+++ b/src/css/Loading.css
@@ -2,11 +2,41 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50vh;
+  height: 100vh;
+}
+
+.Loading__heading {
+  position: absolute;
+  bottom: 50%;
+  text-transform: uppercase;
+}
+
+.Loading__heading .Loading__dot-indicator {
+  animation: spinner 3s linear infinite;
+  padding: 0px 4px;
+}
+
+.Loading__heading .Loading__dot-indicator:nth-child(1) {
+  animation-delay: 1s;
+}
+
+.Loading__heading .Loading__dot-indicator:nth-child(2) {
+  animation-delay: 2s;
+}
+
+.Loading__heading .Loading__dot-indicator:nth-child(3) {
+  animation-delay: 3s;
+}
+
+.Loading__spinner {
+  /* border: 2px solid yellow;
+  background-color: yellow; */
+  width: 50vw;
+  text-align: center;
 }
 
 .Loading__spinner div {
-  transform-origin: -128px 128px;
+  transform-origin: 50% 50%;
   animation: spinner 1.2s linear infinite;
 }
 
@@ -14,10 +44,10 @@
   content: " ";
   display: block;
   position: absolute;
-  top: 3px;
-  left: 29px;
-  width: 5px;
-  height: 14px;
+  top: 8px;
+  left: 24px;
+  width: 8px;
+  height: 16px;
   border-radius: 20%;
   background: #fff;
 }
