--- a/src/css/Map.css
+++ b/src/css/Map.css
@@ -10,7 +10,7 @@
   padding: 0px 24px;
 }
 
-.dialog__modal-container, .restart__modal {
+.dialog__modal-container, .restart__modal, .refresh__modal {
   color: #FFF;
   position: absolute;
   z-index: 2;
@@ -48,6 +48,19 @@
   background-color: #FFF;
   bottom: 16px;
   display: inline-block;
+  right: 158px;
+  font-size: 24px;
+  letter-spacing: 0.48px;
+  padding: 4px 8px;
+  text-transform: uppercase;
+  box-shadow: 0px 0px 4px 2px #000;
+}
+
+.refresh__modal {
+  border: 1px solid #000;
+  background-color: #FFF;
+  bottom: 16px;
+  display: inline-block;
   right: 16px;
   font-size: 24px;
   letter-spacing: 0.48px;
@@ -59,7 +72,7 @@
 
 /* X-SMALL */
 @media only screen and (max-width: 576px) {
-  .dialog__modal, .restart__modal {
+  .dialog__modal, .restart__modal, .refresh__modal {
     font-size: 16px;
   }
 }
